adicionando o delete user
